# token_counter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/token_counter/: __init__.py  cli.py  count_tokens.py
